--- a/single-spa-demo2/sspa-d2-shell/src/index.ejs
+++ b/single-spa-demo2/sspa-d2-shell/src/index.ejs
@@ -17,7 +17,7 @@
     Learn more about CSP policies at https://content-security-policy.com/#directive
   -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
+    content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* 192.168.0.23:* ws://localhost:* ws://192.168.0.23:*; style-src 'unsafe-inline' https:; object-src 'none';">
   <meta name="importmap-type" content="systemjs-importmap" />
   <!-- If you wish to turn off import-map-overrides for specific environments (prod), uncomment the line below -->
   <!-- More info at https://github.com/joeldenning/import-map-overrides/blob/master/docs/configuration.md#domain-list -->
@@ -47,7 +47,9 @@
     <script type="systemjs-importmap">
     {
       "imports": {
-        "@sspa-d2/root-config": "//localhost:9000/sspa-d2-root-config.js"
+        "@sspa-d2/root-config": "//localhost:9000/sspa-d2-root-config.js",
+        "@sspa-d2/sspa-d2-tasks-list": "//localhost:8081/js/app.js",
+        "@sspa-d2/sspa-d2-task-edit": "//localhost:8082/js/app.js"
       }
     }
   </script>
@@ -73,6 +75,7 @@
   <main></main>
   <script>
     System.import('@sspa-d2/root-config');
+    // System.import('@sspa-d2/sspa-d2-tasks-list');
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
