feat(sspa-d2): display order of the two MFEs

--- a/single-spa-demo2/sspa-d2-shell/src/index.ejs
+++ b/single-spa-demo2/sspa-d2-shell/src/index.ejs
@@ -72,7 +72,10 @@
 </head>
 
 <body>
-  <main></main>
+  <main>
+    <div id="single-spa-application:@sspa-d2/tasks-list"></div>
+    <div id="single-spa-application:@sspa-d2/task-edit"></div>
+  </main>
   <script>
     System.import('@sspa-d2/root-config');
     // System.import('@sspa-d2/sspa-d2-tasks-list');
